--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
-.header {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+::after,
+::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #fff;
+}
+.navbar {
+  position: relative;
+  width: 100%;
+  height: 92px;
   display: flex;
+  justify-content: space-between;
+}
+.logo {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 20px;
+  color: #6070ff;
+  text-decoration: none;
+}
+.menu {
+  display: none;
 }
