--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .navbar {
   position: relative;
   width: 100%;
-  height: 92px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
 }
@@ -31,3 +31,102 @@ body {
 .menu {
   display: none;
 }
+
+.page-1 {
+  position: relative;
+  background-color: #fff;
+  border-bottom-left-radius: 100px 70px;
+  overflow-x: hidden;
+}
+
+.p1-title {
+  color: #172B4D;
+  font-size: 60px;
+  line-height: 1;
+  margin-bottom: 1.2rem;
+}
+
+.p1-description {
+  font-weight: 500;
+}
+
+.p1-connect {
+  color: #7F8CFF;
+  font-weight: 500px;
+  font-size: 16px;
+  text-decoration: none;
+  line-height: 24px;
+}
+
+.p1-link {
+  display: flex;
+  width: clamp(12rem, 15vw, 20rem);
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  list-style-type: none;
+}
+
+.image {
+  position: absolute;
+}
+
+.image-1 {
+  width: 15px;
+  height: 15px;
+  left: 214px;
+}
+
+.image-3 {
+  width: 25px;
+  height: 18px;
+  left: 132.98px;
+  top: 35px;
+}
+
+.image-4 {
+  width: 95.58px;
+  height: 70px;
+  left: 370px;
+  top: 10px;
+}
+
+.image-5 {
+  width: 45px;
+  height: 99px;
+  left: 400px;
+  top: 50px;
+}
+
+.image-6 {
+  width: 15px;
+  height: 15px;
+  left: 300px;
+  top: 180px;
+}
+
+.image-7 {
+  width: 20px;
+  height: 20px;
+  left: 341.76px;
+  top: 380px;
+}
+
+.image-8 {
+  width: 20px;
+  height: 15px;
+  left: 345px;
+  top: 370px;
+}
+ .image-9 {
+  width: 44px;
+  height: 44px;
+  left: 237px;
+  top: 430px;
+ }
+
+ .image-10 {
+  width: 15px;
+  height: 15px;
+  left: 53px;
+  top: 450px;
+ }
