--- a/style.css
+++ b/style.css
@@ -11,25 +11,42 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #fff;
 }
+a {
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+}
 
 .navbar {
   position: relative;
+  top: 10;
+  left: 10px;
   width: 100%;
   height: 70px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-  font-weight: 600;
-  font-size: 20px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
   line-height: 20px;
-  color: #6070ff;
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #6070FF;
 }
 
 .menu {
   display: none;
+}
+
+.nave-toggle {
+  margin-right: 15px;
 }
 
 .page-1 {
@@ -40,27 +57,41 @@ body {
 }
 
 .p1-title {
-  color: #172b4d;
-  font-size: 60px;
-  line-height: 1;
-  margin-bottom: 1.2rem;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  color: #172B4D;
+  padding-top: 50px;
 }
 
 .p1-description {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
   font-weight: 500;
+  color: #344563;
 }
 
 .p1-connect {
   color: #7f8cff;
   font-weight: 500px;
+  font-style: normal;
   font-size: 16px;
   text-decoration: none;
   line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 1;
 }
 
 .p1-link {
   display: flex;
-  width: clamp(12rem, 15vw, 20rem);
+  width: clamp(12rem, 12vw, 15rem);
   justify-content: space-between;
   margin-bottom: 1rem;
   list-style-type: none;
@@ -71,9 +102,13 @@ body {
 }
 
 .image-1 {
-  width: 15px;
-  height: 15px;
-  left: 214px;
+  position: absolute;
+  width: 51.99px;
+  height: 9.3px;
+  left: -34px;
+  top: 141.49px;
+  background: #EBEBFF;
+  transform: rotate(-46.14deg);
 }
 
 .image-3 {
@@ -97,13 +132,6 @@ body {
   top: 50px;
 }
 
-.image-6 {
-  width: 15px;
-  height: 15px;
-  left: 300px;
-  top: 180px;
-}
-
 .image-7 {
   width: 20px;
   height: 20px;
@@ -125,9 +153,26 @@ body {
   top: 430px;
 }
 
-.image-10 {
+.circle {
+  position: absolute;
+}
+
+.circle-1 {
+  width: 15px;
+  height: 15px;
+  left: 300px;
+  top: 180px;
+}
+
+.circle-2 {
   width: 15px;
   height: 15px;
   left: 53px;
   top: 450px;
+}
+
+.circle-3 {
+  width: 15px;
+  height: 15px;
+  left: 214px;
 }
