--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #fff;
 }
+
 a {
   text-decoration: none;
 }
+
 ul {
   list-style-type: none;
 }
@@ -30,7 +32,7 @@ ul {
 }
 
 .logo {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -38,7 +40,7 @@ ul {
   display: flex;
   align-items: center;
   text-align: center;
-  color: #6070FF;
+  color: #6070ff;
 }
 
 .menu {
@@ -46,7 +48,7 @@ ul {
 }
 
 .nave-toggle {
-  margin-right: 15px;
+  margin-right: 20px;
 }
 
 .page-1 {
@@ -57,24 +59,23 @@ ul {
 }
 
 .p1-title {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   display: flex;
   align-items: center;
-  color: #172B4D;
+  color: #172b4d;
   padding-top: 50px;
 }
 
 .p1-description {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 500;
   color: #344563;
 }
 
@@ -107,7 +108,7 @@ ul {
   height: 9.3px;
   left: -34px;
   top: 141.49px;
-  background: #EBEBFF;
+  background: #ebebff;
   transform: rotate(-46.14deg);
 }
 
